--- a/i18n/locales/en/imprint.json
+++ b/i18n/locales/en/imprint.json
@@ -1,53 +1,50 @@
 {
   "imprint": {
+    "headerTitle": "Imprint",
+    "headerSubtitle": "Legal information according to §5 ECG, §14 UGB and §25 Media Act",
+
+    "companyNameTitle": "Company Name",
+    "companyNameContent": "Rieger Systems GmbH (in formation)",
+
+    "companyFormTitle": "Legal Form",
+    "companyFormContent": "Limited liability company (GmbH), foundation-privileged",
+
+    "addressTitle": "Address",
+    "addressLine1": "Musterstraße 12",
+    "addressLine2": "1234 Example City, Austria",
+
+    "contactTitle": "Contact",
+    "contactEmailLabel": "Email:",
+    "contactPhoneLabel": "Phone:",
+
+    "companyRegisterNumberTitle": "Commercial Register Number",
+    "companyRegisterNumberContent": "in preparation",
+
+    "companyRegisterCourtTitle": "Commercial Register Court",
+    "companyRegisterCourtContent": "Commercial Court Vienna",
+
+    "uidNumberTitle": "VAT ID Number",
+    "uidNumberContent": "in preparation",
+
+    "managingDirectorTitle": "Managing Director",
+    "managingDirectorContent": "Tobias Rieger",
+
+    "businessPurposeTitle": "Object of the Company",
+    "businessPurposeContent": "Development and operation of software and AI systems",
+
+    "chamberMembershipTitle": "Member of the Chamber of Commerce",
+    "chamberMembershipContent": "Austrian Federal Economic Chamber – Division Information & Consulting",
+
+    "mediaResponsibilityTitle": "Responsible for content according to §25 MediaG",
+    "mediaResponsibilityContent": "Tobias Rieger, address as above",
+
+    "onlineDisputeResolutionTitle": "Online Dispute Resolution (EU)",
+    "onlineDisputeResolutionLinkText": "EU Commission platform:",
+
+    "disclaimerTitle": "Disclaimer",
+    "disclaimerContent": "Despite careful content control, we assume no liability for the content of external links. The operators of the linked pages are solely responsible for their content.",
+
     "pageTitle": "Imprint – Rieger Systems",
-    "pageDescription": "Legal information according to §5 ECG for the Rieger Systems website.",
-    "heading": "Imprint",
-    "subheading": "Legal information according to §5 ECG, §14 UGB and §25 Media Act",
-    "fields": {
-      "companyName": {
-        "title": "Company Name"
-      },
-      "companyForm": {
-        "title": "Legal Form"
-      },
-      "address": {
-        "title": "Address"
-      },
-      "contact": {
-        "title": "Contact"
-      },
-      "commercialRegisterNumber": {
-        "title": "Commercial Register No."
-      },
-      "commercialRegisterCourt": {
-        "title": "Commercial Register Court"
-      },
-      "uidNumber": {
-        "title": "VAT ID No."
-      },
-      "managingDirector": {
-        "title": "Managing Director"
-      },
-      "companyPurpose": {
-        "title": "Company Purpose",
-        "content": "Development and operation of software and AI systems"
-      },
-      "chamberMembership": {
-        "title": "Chamber Membership",
-        "content": "Austrian Federal Economic Chamber – Information & Consulting Division"
-      },
-      "mediaLawResponsibility": {
-        "title": "Content responsibility according to §25 Media Act",
-        "content": "Tobias Rieger, address as above"
-      },
-      "onlineDisputeResolution": {
-        "title": "Online Dispute Resolution (EU)"
-      },
-      "disclaimer": {
-        "title": "Disclaimer",
-        "content": "Despite careful content control, we assume no liability for the content of external links. The operators of the linked pages are solely responsible for their content."
-      }
-    }
+    "pageDescription": "Legal information according to §5 ECG for the Rieger Systems website."
   }
 }
