Statistik für Amarawell auf deutsch eingebaut

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -459,12 +459,7 @@
       "section1Content": "AmaraWell ist eine KI-gestützte Plattform, die psychologische Begleitung und Unterstützung bietet. Das Projekt entstand aus der Überzeugung, dass mentale Gesundheit eine zentrale Rolle im Leben jedes Menschen spielt und in der heutigen Zeit häufig vernachlässigt wird. In einer Welt voller digitaler Reize, sozialen Drucks und steigender Anforderungen ist es umso wichtiger, Menschen dabei zu unterstützen, mentale Resilienz aufzubauen und seelische Krisen zu bewältigen.",
 
       "section2Title": "Gesellschaftliche Relevanz",
-      "section2ListItem1": "Österreich: 1.212 Suizide im Jahr 2023 – dreimal so viele wie im Straßenverkehr. 80% der Suizidtoten waren Männer. Besonders betroffen: Menschen im mittleren Lebensalter (45–64 Jahre).",
-      "section2ListItem2": "Deutschland: 10.300 Suizide im Jahr 2023 – Anstieg von 1,8% gegenüber dem Vorjahr. 73% der Suizidtoten waren Männer. Besonders betroffen: Menschen über 65 Jahre.",
-      "section2ListItem3": "Europäische Union: 47.346 Todesfälle durch Suizid im Jahr 2021. Durchschnittliche Suizidrate: 10,2 pro 100.000 Einwohner.",
-      "section2ListItem4": "Weltweit: Jährlich über 700.000 Suizide – mehr als durch Malaria, HIV/AIDS oder Brustkrebs. Auf jeden Suizid kommen 10 bis 30 Suizidversuche.",
-      "section2Content": "[DIAGRAM]",
-
+      "section2Content": "Warum AmaraWell wichtig ist? Die harten Fakten zeigen es: [LINK]",
       "section3Title": "Unterstützung durch medizinisches Fachpersonal",
       "section3Content": "Psychiater, Psychotherapeuten und psychologische Fachkräfte leisten eine unschätzbare Arbeit. Ihre Expertise, Empathie und therapeutischen Fähigkeiten sind essenziell, um Menschen auf ihrem Weg zur mentalen Stabilität zu begleiten.",
 
