--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -459,11 +459,7 @@
       "section1Content": "AmaraWell is an AI-powered platform that provides psychological support and guidance. The project arose from the conviction that mental health plays a central role in everyone’s life and is often neglected in today’s world. In a world full of digital stimuli, social pressure, and rising demands, it is more important than ever to help people build resilience and cope with emotional crises.",
 
       "section2Title": "Societal relevance",
-      "section2ListItem1": "Austria: 1,212 suicides in 2023 – three times as many as in road traffic. 80% of suicide victims were men. Particularly affected: people in middle age (45–64 years).",
-      "section2ListItem2": "Germany: 10,300 suicides in 2023 – an increase of 1.8% compared to the previous year. 73% of suicide victims were men. Particularly affected: people over 65.",
-      "section2ListItem3": "European Union: 47,346 suicide deaths in 2021. Average suicide rate: 10.2 per 100,000 inhabitants.",
-      "section2ListItem4": "Worldwide: Over 700,000 suicides annually – more than from malaria, HIV/AIDS, or breast cancer. For every suicide, there are 10 to 30 suicide attempts.",
-
+      "section2Content": "Warum AmaraWell wichtig ist? Die harten Fakten zeigen es: [LINK]",
       "section3Title": "Support by medical professionals",
       "section3Content": "Psychiatrists, psychotherapists, and psychological professionals provide invaluable services. Their expertise, empathy, and therapeutic skills are essential in supporting people on their path to mental stability.",
 
