Änderung von Index.vue (amarawell) - angepasst an Mehrsprachigkeit

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -460,6 +460,8 @@
 
       "section2Title": "Gesellschaftliche Relevanz",
       "section2Content": "Warum AmaraWell wichtig ist? Die harten Fakten zeigen es: [LINK]",
+      "section2LinkText": "Alle Zahlen & Grafiken auf einen Blick",
+
       "section3Title": "Unterstützung durch medizinisches Fachpersonal",
       "section3Content": "Psychiater, Psychotherapeuten und psychologische Fachkräfte leisten eine unschätzbare Arbeit. Ihre Expertise, Empathie und therapeutischen Fähigkeiten sind essenziell, um Menschen auf ihrem Weg zur mentalen Stabilität zu begleiten.",
 
