--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -459,7 +459,9 @@
       "section1Content": "AmaraWell is an AI-powered platform that provides psychological support and guidance. The project arose from the conviction that mental health plays a central role in everyone’s life and is often neglected in today’s world. In a world full of digital stimuli, social pressure, and rising demands, it is more important than ever to help people build resilience and cope with emotional crises.",
 
       "section2Title": "Societal relevance",
-      "section2Content": "Warum AmaraWell wichtig ist? Die harten Fakten zeigen es: [LINK]",
+      "section2Content": "See why AmaraWell matters – the hard facts are undeniable. Discover more: [LINK]",
+      "section2LinkText": "All facts & figures at a glance",
+
       "section3Title": "Support by medical professionals",
       "section3Content": "Psychiatrists, psychotherapists, and psychological professionals provide invaluable services. Their expertise, empathy, and therapeutic skills are essential in supporting people on their path to mental stability.",
 
