--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -448,6 +448,10 @@
       "section6Content": "We are looking for companies from different sectors to test AmaraCall in a pilot phase and further develop it together with us. By working closely with pilot partners, we want to optimize the application in practice and make it usable across industries."
     },
     "amarawell": {
+      "statistics": {
+        "headline": "Mental Health: Numbers that Matter",
+        "intro": "How many people are affected? What are the costs? Two charts that highlight the major societal impact of mental health."
+      },
       "id": "amarawell",
       "slug": "amarawell",
       "image": "/images/projects/amarawell.png",
@@ -493,7 +497,7 @@
         "explanation": "This chart shows how many people per year (12-month prevalence) in Germany, Austria, Switzerland, the entire EU, and worldwide experience at least one mental health disorder – both in millions and as a percentage of the population.",
         "noteLabel": "Note:",
         "note": "All numbers are estimates based on official prevalence data and current population figures. Differences in diagnostic methods and survey years may cause slight deviations.",
-        "sourcesLabel": "Sources:",
+        "sourcesLabel": "Sources",
         "sources": {
           "dgppn": "DGPPN, 2022 (Germany)",
           "oecd": "OECD/European Observatory, 2021 (Austria)",
@@ -532,7 +536,7 @@
           "x": "Region / Country"
         },
         "noteLabel": "Note: The costs shown are population averages, including healthy individuals. Individual costs for those affected are significantly higher.",
-        "sourcesLabel": "Sources:"
+        "sourcesLabel": "Sources: "
       }
     },
     "index": {
